--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.20.0",
     "core-js": "^3.6.4",
     "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.4.1",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
+    "vuetify": "^2.3.14",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
@@ -18,8 +21,11 @@
     "@vue/cli-plugin-router": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "deepmerge": "^4.2.2",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "sass": "^1.27.0",
+    "sass-loader": "^10.0.3",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
